<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="bottom_nav_buttons_title">Buttons</string>
    <string name="bottom_nav_lock_screen_title">Lock Screen</string>
    <string name="bottom_nav_status_bar_title">Status Bar</string>
    <string name="bottom_nav_notifications_title">Notifications</string>
    <string name="bottom_nav_system_misc_title">System/Misc</string>
    <string name="hw_keys_title">Buttons</string>
    <string name="hw_keys_summary">Configure hardware keys and/or volume rocker options</string>
    <string name="navigationbar_title">Navigation bar</string>
    <string name="navigationbar_summary">Configure SmartBar, Fling or Pulse</string>
    <string name="powermenu_title">Power menu</string>
    <string name="powermenu_summary">Configure additional power menu options</string>
    <string name="volume_rocker_title">Volume rocker</string>
    <string name="volume_rocker_summary">Set default behavior and actions for vol +/- keys</string>
    <string name="lockscreen_date_and_time_title">Lockscreen clocks</string>
    <string name="lockscreen_date_and_time_summary">Customize your view of date &amp; time on the lockscreen</string>
    <string name="lockscreen_display_title">Lockscreen display</string>
    <string name="lockscreen_display_summary">Add or remove visual elements of your lockscreen</string>
    <string name="lock_screen_weather_settings_title">Weather options</string>
    <string name="lock_screen_weather_settings_summary">Configure lockscreen weather</string>
    <string name="battery_options_title">Battery options</string>
    <string name="battery_options_summary">Customize how battery is displayed</string>
    <string name="clock_options_title">Clock options</string>
    <string name="clock_options_summary">Set view options of time &amp; date in status bar</string>
    <string name="status_bar_items_title">Status bar items</string>
    <string name="status_bar_items_summary">Configure status bar indicators</string>
    <string name="traffic_title">Network indicator</string>
    <string name="traffic_summary">Enable &amp; configure network indicator in status bar</string>
    <string name="quicksettings_title">Quick settings</string>
    <string name="quicksettings_summary">Customize the overall view &amp; functionality</string>
    <string name="led_notifications_title">LED notifications</string>
    <string name="led_notifications_summary">Enable/disable the LED light. Configure colors &amp; behavior</string>
    <string name="headsup_title">Heads-up</string>
    <string name="headsup_summary">Configure heads-up options</string>
    <string name="general_notifications_title">General notifications</string>
    <string name="general_notifications_summary">Miscellaneous notification controls</string>
    <string name="recents_title">Recents</string>
    <string name="recents_summary">Configure look &amp; feel of recent apps view</string>
    <string name="gesture_options_title">Gestures</string>
    <string name="gesture_options_summary">Enable/disable device specific user actions</string>
    <string name="miscellaneous_title">Miscellaneous</string>
    <string name="miscellaneous_summary">Uncategorized options</string>
    <string name="changelog_title">Changelog</string>
    <string name="changelog_summary">List of recent commits added to AquariOS</string>
    <string name="display_options_title">Display options</string>
    <string name="display_options_summary">Set animation preferences and other display settings</string>
    <string name="empty_category_title">No extra features yet...</string>
    <string name="empty_category_description">However, new features may be added here soon. Check back after future updates!</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="color_picker_simple_dialog_title">Select an LED color</string>
    <string name="aosp_recents_title">AOSP recents</string>
    <string name="show_clear_all_recents_button_title">Clear-all FAB</string>
    <string name="show_clear_all_recents_button_summary_on">Show clear all FAB</string>
    <string name="show_clear_all_recents_button_summary_off">Show AOSP clear all</string>
    <string name="recents_clear_all_location_title">Clear all FAB location</string>
    <string name="recents_clear_all_location_top_right">Top right</string>
    <string name="recents_clear_all_location_top_left">Top left</string>
    <string name="recents_clear_all_location_top_center">Top center</string>
    <string name="recents_clear_all_location_bottom_right">Bottom right</string>
    <string name="recents_clear_all_location_bottom_left">Bottom left</string>
    <string name="recents_clear_all_location_bottom_center">Bottom center</string>
    <string name="recents_show_membar_title">Memory bar</string>
    <string name="recents_show_membar_summary">Horizontal bar indicating used/free memory</string>
    <string name="changelog_error">Unable to load changelog</string>
    <string name="weather_show_weather_title">Show weather</string>
    <string name="weather_show_weather_summary">Enable to show weather information</string>
    <string name="weather_show_location_title">Show location</string>
    <string name="weather_show_location_summary">Enable to show the location</string>
    <string name="weather_config_title">Service settings</string>
    <string name="weather_icon_pack_title">Condition icon pack</string>
    <string name="omnijaws_settings_title">OmniJaws weather</string>
    <string name="weather_tile_title">Weather tile</string>
    <string name="weather_tile_settings_summary">Configure weather settings</string>
    <string name="weather_config_summary"></string>
    <string name="weather_icon_pack_note">Note\u003a you can install new icon packs from play store by searching for \"Chronus icons\"</string>
    <string name="swap_volume_buttons_title">Reorient</string>
    <string name="swap_volume_buttons_summary">Swap volume buttons when the screen is rotated</string>
    <string name="volume_button_music_control_title">Playback control</string>
    <string name="volume_button_music_control_summary">When the screen is off, long-pressing the volume keys will skip music tracks</string>
    <string name="volume_keys_control_media_stream_title">Volume keys control media volume</string>
    <string name="volume_keys_control_media_stream_summary">Force volume keys to control media stream</string>
    <string name="headset_connect_player_title">Launch music app upon headset connection</string>
    <string name="headset_connect_player_disabled">Disabled</string>
    <string name="headset_connect_player_wired">With wired headset</string>
    <string name="headset_connect_player_bt_no_carkit">With bluetooth headset (no car-kit)</string>
    <string name="headset_connect_player_bt">With any bluetooth headset</string>
    <string name="headset_connect_player_both_no_carkit">With bluetooth or wired headset (no car-kit)</string>
    <string name="headset_connect_player_both">With any bluetooth or wired headset</string>
    <string name="double_tap_sleep_lockscreen">Lock screen</string>
    <string name="double_tap_sleep_lockscreen_summary">Double-tap lockscreen to put device to sleep</string>
    <string name="systemui_tuner_lockscreen_bottom_shortcuts_title">Bottom shortcuts</string>
    <string name="systemui_tuner_lockscreen_bottom_shortcuts_summary">Configure the bottom shortcuts on lockscreen</string>
    <string name="show_brightness_title">Brightness slider</string>
    <string name="show_brightness_summary_on">Showing brightness slider in QS panel</string>
    <string name="show_brightness_summary_off">Brightness slider is hidden</string>
    <string name="media_art_title">Media cover art</string>
    <string name="media_art_summary">Enable media cover art on the lockscreen</string>
    <string name="torch_power_button_gesture_title">Screen off power button torch</string>
    <string name="torch_power_button_gesture_none">Disabled</string>
    <string name="torch_power_button_gesture_dt">Double-tap power to toggle torch (adds slight delay to single-tap)</string>
    <string name="torch_power_button_gesture_lp">Long-press power to toggle torch</string>
    <string name="battery_led_options">Battery light options</string>
    <string name="battery_light_allow_on_dnd_title">Battery light in Do-Not-Disturb mode</string>
    <string name="battery_light_low_blinking_title">Blinking light on low battery</string>
    <string name="battery_led_color">Battery light color when charging</string>
    <string name="battery_light_low_color">Low battery</string>
    <string name="battery_light_medium_color">Medium battery</string>
    <string name="battery_light_full_color">High battery</string>
    <string name="battery_light_reallyfull_color">Full battery</string>
    <string name="notification_light_main">LED notifications</string>
    <string name="notification_light_settings">Customize LED notifications on a per-app basis</string>
    <string name="qs_footer_warnings_title">QS footer warnings</string>
    <string name="qs_footer_warnings_summary">Display a warning at base of QS panel when network is monitored by external apps or VPN</string>
    <string name="double_tap_sleep_statusbar_title">Status bar</string>
    <string name="double_tap_sleep_statusbar_summary">Double-tap status bar to put device to sleep</string>
    <string name="less_boring_heads_up_title">Less intrusive heads-up</string>
    <string name="less_boring_heads_up_summary">Show heads-up only for dialer or messaging app</string>
    <string name="qs_panel_view_title">Quick settings panel view</string>
    <string name="qs_rows_columns_title_summary">Set columns/rows for tiles. Add/remove settings from panel</string>
    <string name="category_qstiles_portrait">Adjust tile layout for portait view</string>
    <string name="qs_rows_portrait_title">Number of rows</string>
    <string name="qs_columns_portrait_title">Number of columns</string>
    <string name="category_qstiles_landscape">Adjust tile layout for landscape view</string>
    <string name="qs_rows_landscape_title">Number of rows</string>
    <string name="qs_columns_landscape_title">Number of columns</string>
    <string name="network_traffic_state_title">Network indicator</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
    <string name="qs_tile_title_visibility_title">Show quick tile names</string>
    <string name="qs_tile_titles_showing">Show quick tile names are showing</string>
    <string name="qs_tile_titles_hidden">Show quick tile names are hidden</string>
    <string name="recents_icon_pack_title">Icon Pack</string>
    <string name="recents_icon_pack_summary">Apply a custom icon pack for Recents panel</string>
    <string name="no_iconpacks_summary">No icon packs installed</string>
    <string name="dialog_pick_iconpack_title">Pick icon pack</string>
    <string name="default_iconpack_title">Default icons</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="vol_dnd_category_title">Do not disturb mode</string>
    <string name="volbtn_down_zen_title">Volume down for do not disturb</string>
    <string name="volbtn_down_zen_summary">allow volume down to enter do not disturb mode</string>
    <string name="volbtn_up_zen_title">Volume up in do not disturb</string>
    <string name="volbtn_up_zen_summary">allow volume up to exit do not disturb mode</string>
    <string name="brightness_control_category">Brightness control</string>
</resources>