<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2018 AquariOS

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/qs_panel_view_title" >

	<PreferenceCategory
		android:title="@string/brightness_control_category">
			<com.android.settings.aquarios.SecureSettingSwitchPreference
				android:key="qs_show_brightness"
				android:title="@string/show_brightness_title"
				android:summaryOn="@string/show_brightness_summary_on"
				android:summaryOff="@string/show_brightness_summary_off"
				android:defaultValue="true" />
	</PreferenceCategory>

	<PreferenceCategory
        android:title="@string/category_qstiles_portrait">
			<com.android.settings.aquarios.CustomSeekBarPreference
				android:key="qs_rows_portrait"
				android:title="@string/qs_rows_portrait_title"
				android:max="5"
				settings:min="1"
				settings:units="" />

			<com.android.settings.aquarios.CustomSeekBarPreference
				android:key="qs_columns_portrait"
				android:title="@string/qs_columns_portrait_title"
				android:max="7"
				settings:min="1"
				settings:units="" />
	</PreferenceCategory>

	<PreferenceCategory
        android:title="@string/category_qstiles_landscape">
			<com.android.settings.aquarios.CustomSeekBarPreference
				android:key="qs_rows_landscape"
				android:title="@string/qs_rows_landscape_title"
				android:max="3"
				settings:min="1"
				settings:units="" />

			<com.android.settings.aquarios.CustomSeekBarPreference
				android:key="qs_columns_landscape"
				android:title="@string/qs_columns_landscape_title"
				android:max="9"
				settings:min="1"
				settings:units="" />
	</PreferenceCategory>

</PreferenceScreen>
